--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rkyv = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_arrays = "0.1"
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", default-features = false, features = ["rt", "time", "sync", "macros"] }
 anyhow = "1.0"
 thiserror = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
@@ -32,6 +32,7 @@ rayon = "1.7"
 nalgebra = { version = "0.32", features = ["serde-serialize"] }
 rand = "0.8"
 rand_chacha = "0.3"
+getrandom = { version = "0.3", features = ["wasm_js"] }
 ordered-float = "4.0"
 once_cell = "1.19"
 
