--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,9 +11,13 @@ path = "src/main.rs"
 [dependencies]
 universe_sim = { path = "../crates/universe_sim" }
 clap = { workspace = true, features = ["derive"] }
-tokio = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 serde = { workspace = true }
 toml = { workspace = true }
+tokio-tungstenite = "0.21"
+warp = "0.3"
+serde_json = { workspace = true }
+futures-util = "0.3"
