--- a/viz_web/Cargo.toml
+++ b/viz_web/Cargo.toml
@@ -21,7 +21,9 @@ uuid = { workspace = true, features = ["v4", "js"] }
 js-sys = { workspace = true }
 web-sys = { workspace = true, features = [
     "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
-    "WebSocket", "MessageEvent", "console"
+    "WebSocket", "MessageEvent", "console", "BinaryType", "CloseEvent"
 ] }
 wasm-bindgen = { workspace = true }
 getrandom = { version = "0.3", features = ["wasm_js"] }
+agent_evolution = { path = "../crates/agent_evolution", default-features = false }
+physics_engine   = { path = "../crates/physics_engine", default-features = false }
