Refactor statistics calculation in AgentManager and World; update Cargo.toml to always include viz_web in workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,7 @@ members = [
 ]
 resolver = "2"
 
-# Optional web dashboard crate built only when the `dashboard` feature is enabled
-[workspace.optional]
-dashboard = ["viz_web"]
+# Note: viz_web is always included in the workspace
 
 [workspace.dependencies]
 # Core simulation
