Add TODO list and enhance CLI with RPC support
- Introduced a new TODO.md file to track stubs and TODO items in the codebase.
- Updated cli/Cargo.toml to include reqwest for making HTTP requests.
- Enhanced cli/src/main.rs to implement RPC functionality, allowing the CLI to connect to a running simulation and retrieve status updates.
- Added a new rpc.rs module to define JSON-RPC request and response structures.
- Improved error handling and logging for simulation status retrieval.
- Refactored various command implementations to accommodate new RPC features.

--- a/crates/agent_evolution/Cargo.toml
+++ b/crates/agent_evolution/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 bevy_ecs = { workspace = true }
+chrono = { workspace = true }
+log = { workspace = true }
 nalgebra = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
