--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,3 +21,4 @@ tokio-tungstenite = "0.21"
 warp = "0.3"
 serde_json = { workspace = true }
 futures-util = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
