Update dependencies and enhance simulation state management
- Added new dependencies: `chrono`, `log`, and `rand_distr` to Cargo.toml for improved time handling and random distribution functionalities.
- Updated Cargo.lock to reflect the new dependencies and their versions.
- Enhanced the CLI's main.rs to improve RPC functionality, including better error handling and status reporting.
- Refactored persistence logic in universe_sim to support saving and loading simulation states with detailed entity serialization.
- Improved the physics engine's handling of particles and interactions, ensuring more accurate simulations.
- Cleaned up unused variables and comments across various modules for better code clarity.

--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -8,6 +8,7 @@ nalgebra = { workspace = true }
 ndarray = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
+rand_distr = { workspace = true }
 serde = { workspace = true }
 serde_arrays = { workspace = true }
 anyhow = { workspace = true }
