--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ rayon = "1.7"
 # Physics and math
 nalgebra = { version = "0.32", features = ["serde-serialize"] }
 rand = "0.8"
+rand_distr = "0.4"
 rand_chacha = "0.3"
 getrandom = { version = "0.3", features = ["wasm_js"] }
 ordered-float = "4.0"
@@ -55,6 +56,7 @@ toml = "0.8"
 prometheus = "0.13"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+log = "0.4"
 
 # Web dashboard (WASM)
 wasm-bindgen = "0.2"
@@ -77,6 +79,7 @@ candle-nn = "0.3"
 
 # Testing
 tempfile = "3.8"
+chrono = { version = "0.4", features = ["serde"] }
 
 [profile.release]
 opt-level = 3
