--- a/crates/universe_sim/Cargo.toml
+++ b/crates/universe_sim/Cargo.toml
@@ -19,6 +19,7 @@ rand_chacha = { workspace = true }
 tracing = { workspace = true }
 config = { workspace = true }
 toml = { workspace = true }
+bincode = { workspace = true }
 
 [features]
 default = ["full-simulation"]
