Enhance CLI functionality and update TODO list
- Added `serde_json` as a new dependency in Cargo.toml for improved JSON handling.
- Marked multiple TODO items as complete in TODO.md, including various inspection functionalities for planets, lineages, and universe statistics.
- Implemented detailed inspection commands in cli/src/main.rs for planets, lineages, and universe statistics, with fallback to sample data if the simulation is not running.
- Improved error handling and logging for RPC interactions, ensuring better feedback during inspection commands.
- Updated the physics engine to include comprehensive atomic physics updates, enhancing simulation accuracy.

--- a/crates/universe_sim/Cargo.toml
+++ b/crates/universe_sim/Cargo.toml
@@ -8,6 +8,7 @@ physics_engine = { path = "../physics_engine" }
 bevy_ecs = { workspace = true }
 rkyv = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
