--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ prometheus = "0.13"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 log = "0.4"
+env_logger = "0.11"
+console_error_panic_hook = "0.1.7"
 
 # Web dashboard (WASM)
 wasm-bindgen = "0.2"
