--- a/crates/universe_sim/Cargo.toml
+++ b/crates/universe_sim/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 physics_engine = { path = "../physics_engine" }
+diagnostics = { path = "../diagnostics" }
 bevy_ecs = { workspace = true }
 rkyv = { workspace = true }
 serde = { workspace = true }
@@ -22,6 +23,9 @@ config = { workspace = true }
 toml = { workspace = true }
 bincode = { workspace = true }
 md5 = "0.7.0"
+
+[dev-dependencies]
+approx = "0.5"
 
 [features]
 default = ["full-simulation"]
