--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ node_modules/*
 viz_web/dist/*
 */dist/*
 checkpoints/*
+endf-b-viii.0/**
+endf-b-viii.0/*
+endf-b-viii.0-full.zip
+endfb-viii.0-neutrons.zip
