--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = ["full"] }
