--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -19,6 +19,7 @@ approx = { workspace = true }
 bevy_ecs = { workspace = true, optional = true }
 once_cell = { workspace = true }
 log = { workspace = true }
+endf_parser = "0.2.0"
 
 [features]
 default = ["gpu-acceleration", "bevy"]
