Add FFI integration for scientific libraries and enhance build configuration
- Introduced a new `build.rs` file to manage bindings for Geant4, LAMMPS, GADGET, and ENDF libraries.
- Updated `Cargo.toml` to include dependencies for `libloading`, `cc`, `pkg-config`, and `bindgen` for FFI support.
- Added documentation for FFI integration in `FFI_INTEGRATION.md`, detailing installation and usage of scientific libraries.
- Implemented a new `rpc` module for handling JSON-RPC calls, enhancing communication with the simulation server.
- Expanded the CLI with an interactive mode for real-time simulation control, allowing users to manage and inspect the simulation dynamically.
- Enhanced the consciousness model in the agent evolution module with new metrics for self-awareness and neural complexity.
- Removed obsolete CSV files from the demo outputs to clean up the project structure.
- Added a new PDF document outlining the ultimate universe simulation framework.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,9 @@ candle-nn = "0.3"
 tempfile = "3.8"
 chrono = { version = "0.4", features = ["serde"] }
 
+# FFI and C interop
+libloading = "0.8"
+
 [profile.release]
 opt-level = 3
 lto = true
@@ -92,3 +95,8 @@ panic = "abort"
 [profile.dev]
 opt-level = 1
 debug = true
+
+[build-dependencies]
+cc = "1.0"
+pkg-config = "0.3"
+bindgen = "0.69"
