Add FFI integration for scientific libraries and enhance build configuration
- Introduced the `ffi_integration` crate to provide safe Rust wrappers for Geant4, LAMMPS, GADGET, and ENDF libraries.
- Updated `Cargo.toml` and `Cargo.lock` to include new dependencies and ensure compatibility with FFI libraries.
- Implemented build scripts for generating bindings and managing library dependencies.
- Enhanced the main library with initialization and cleanup functions for all integrated FFI libraries.
- Added comprehensive header files and Rust source files for each library, facilitating high-fidelity scientific simulations.
- Improved error handling and logging for library availability checks and initialization processes.
- Updated setup scripts for easier installation of required scientific libraries.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/agent_evolution",
     "crates/networking",
     "crates/diagnostics",
+    "crates/ffi_integration",
     "demos",
     "viz_web"
 ]
@@ -96,7 +97,5 @@ panic = "abort"
 opt-level = 1
 debug = true
 
-[build-dependencies]
-cc = "1.0"
-pkg-config = "0.3"
-bindgen = "0.69"
+
+
