Introduce `physics_types` crate and refactor dependencies
- Added a new `physics_types` crate to centralize shared data structures and types, resolving circular dependencies between `physics_engine` and `ffi_integration`.
- Updated `Cargo.toml` and `Cargo.lock` files across the workspace to include the new crate and its dependencies (`nalgebra`, `num-complex`, `serde`, `thiserror`).
- Refactored existing code in `ffi_integration` and `physics_engine` to utilize types from the new `physics_types` crate, enhancing modularity and maintainability.
- Removed obsolete type definitions and cleaned up imports in various files to streamline the codebase.
- Created a `progress.md` file to document the build progress, issues encountered, and next steps for further development.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "crates/networking",
     "crates/diagnostics",
     "crates/ffi_integration",
+    "crates/physics_types",
     "demos",
     "viz_web"
 ]
@@ -29,6 +30,7 @@ rayon = "1.7"
 
 # Physics and math
 nalgebra = { version = "0.32", features = ["serde-serialize"] }
+num-complex = { version = "0.4", features = ["serde"] }
 rand = "0.8"
 rand_distr = "0.4"
 rand_chacha = "0.3"
