--- a/crates/ffi_integration/Cargo.toml
+++ b/crates/ffi_integration/Cargo.toml
@@ -16,6 +16,8 @@ anyhow = { workspace = true }
 nalgebra = { workspace = true }
 log = { workspace = true }
 num_cpus = "1.16"
+serde = { workspace = true }
+physics_types = { path = "../physics_types" }
 
 [build-dependencies]
 cc = "1.0"
