--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,3 +22,5 @@ warp = "0.3"
 serde_json = { workspace = true }
 futures-util = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
+bincode = "1.3.3"
+miniz_oxide = "0.7"
