--- a/viz_web/Cargo.toml
+++ b/viz_web/Cargo.toml
@@ -29,3 +29,5 @@ console_error_panic_hook = { workspace = true }
 getrandom = { version = "0.3", features = ["wasm_js"] }
 agent_evolution = { path = "../crates/agent_evolution", default-features = false }
 physics_engine   = { path = "../crates/physics_engine", default-features = false }
+bincode = { version = "1.3.3", default-features = false, features = ["alloc"] }
+miniz_oxide = { version = "0.7", default-features = false, features = ["alloc"] }
