Enhance FFI integration and simulation capabilities
- Implemented a dynamic library wrapper for Geant4, providing full Monte Carlo simulation capabilities.
- Updated build scripts and configuration to support real Geant4 integration, including automated checks and error handling.
- Enhanced the Rust FFI layer to dynamically link against the real library or fall back to stubs when necessary.
- Added a comprehensive demo application showcasing both stub and real implementations of Geant4 functionalities.
- Improved documentation and README for clarity on installation, usage, and performance characteristics.
- Adjusted simulation parameters in configuration files for better performance and accuracy in particle physics simulations.

--- a/config/god_mode_default.toml
+++ b/config/god_mode_default.toml
@@ -2,13 +2,13 @@
 # ========================================
 
 # Time simulation parameters
-tick_span_years = 1_000_000.0          # 1 million years per tick
-target_ups = 1000.0                    # Updates per second target
-# max_ticks = 0                         # No limit (infinite simulation) - 0 means infinite
+tick_span_years = 100_000.0          # finer temporal resolution
+target_ups = 5_000.0                    # if your CPU can cope
+# max_ticks = 1_000_000                        # No limit (infinite simulation) - 0 means infinite
 
 # Initial conditions
-initial_particle_count = 1000          # Starting particles after Big Bang
-universe_radius_ly = 1000.0            # Initial universe radius (light-years)
+initial_particle_count = 1_000_000      # at least
+universe_radius_ly = 1.0            # Initial universe radius (light-years)
 big_bang_temperature = 3000.0          # Initial temperature (K)
 
 # Physics parameters
@@ -24,7 +24,7 @@ agent_lifespan_ticks = 1000            # Maximum individual lifespan (1 Gyr)
 enable_self_modification = true        # Allow agents to modify their code
 
 # Performance and resource limits
-memory_limit_gb = 4.0                  # Memory usage limit (GB)
+memory_limit_gb = 8.0                  # Memory usage limit (GB)
 cpu_limit_percent = 70.0               # CPU usage limit (0-100%)
 auto_save_interval = 10000             # Ticks between autosaves
 auto_save_path = "./checkpoints/"      # Path for autosaved checkpoints
