--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -21,7 +21,7 @@ once_cell = { workspace = true }
 log = { workspace = true }
 endf_parser = "0.2.0"
 physics_types = { path = "../physics_types" }
-ffi_integration = { path = "../ffi_integration" }
+ffi_integration = { path = "../ffi_integration", default-features = false }
 
 [features]
 default = ["gpu-acceleration", "bevy"]
