--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,3 +24,4 @@ futures-util = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 bincode = "1.3.3"
 miniz_oxide = "0.7"
+tracing-log = "0.1"
