--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,17 +10,16 @@ path = "src/main.rs"
 
 [dependencies]
 universe_sim = { path = "../crates/universe_sim" }
+native_renderer = { path = "../crates/native_renderer" }
 clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 anyhow = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
+tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
 serde = { workspace = true }
 toml = { workspace = true }
-tokio-tungstenite = "0.21"
 warp = "0.3"
 serde_json = { workspace = true }
-futures-util = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 bincode = "1.3.3"
 miniz_oxide = "0.7"
