--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -15,8 +15,13 @@ path = "02_weak_interactions.rs"
 name = "dashboard_quickstart"
 path = "03_dashboard_quickstart.rs"
 
+[[bin]]
+name = "bench60"
+path = "04_bench60.rs"
+
 [dependencies]
 physics_engine = { path = "../crates/physics_engine" }
 anyhow = { workspace = true }
 nalgebra = { workspace = true }
 rand = { workspace = true }
+universe_sim = { path = "../crates/universe_sim", features = ["diagnostics"] }
