Task 1: Architecture & Build - Feature gating and Barnes-Hut gravity - Added feature flags for optional modules: quantum-chemistry, climate-sim, geodynamics-sim, amr, gadget-gravity, geant4-integration - Gated heavy modules with cfg attributes to reduce compile times - Implemented Barnes-Hut octree algorithm for O(N log N) gravity calculation - Optimized gravity computation by eliminating particle vector cloning - Added parallel force computation using rayon

--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -26,9 +26,15 @@ ffi_integration = { path = "../ffi_integration", default-features = false }
 [features]
 default = ["gpu-acceleration", "bevy"]
 # Enable full scientific fidelity at the cost of performance.
-heavy = []
+heavy = ["quantum-chemistry", "climate-sim", "geodynamics-sim", "amr", "gadget-gravity", "geant4-integration"]
 gpu-acceleration = []
 simd = []
 bevy = ["dep:bevy_ecs"]
+quantum-chemistry = []
+climate-sim = []
+geodynamics-sim = []
+amr = []
+gadget-gravity = []
+geant4-integration = []
 
 [build-dependencies]
