feat(physics): Refactor quantum chemistry module and update documentation

--- a/crates/ffi_integration/Cargo.toml
+++ b/crates/ffi_integration/Cargo.toml
@@ -10,6 +10,7 @@ lammps = []
 gadget = []
 endf = []
 max-fidelity = ["geant4", "lammps", "gadget", "endf"]
+demo = []
 
 [dependencies]
 anyhow = { workspace = true }
