Added complete mathematical implementations for: normalization – exact analytic Gaussian‐basis normalisation (Helgaker et al.). kinetic_integral – analytical one-electron kinetic-energy integral for s-type Gaussian primitives. Accurate helper routines: double_factorial, gaussian_product_center, boys_function_0 (with error-function evaluation via new libm dependency). Removed stray Unicode character that prevented compilation. Added an exhaustive Default implementation for ForceFieldParameters. Repaired duplicate field issue in PhysicsEngine and restored a single, properly initialised quantum_chemistry_engine. Added internal unit tests validating the new maths (normalisation constant, kinetic integral, factorial). Introduced libm = "0.2" to physics_engine dependencies for robust erf support. All code now compiles; unit tests for the quantum-chemistry utilities pass. Up-stream runtime failures stem from dynamic Geant4 linking, unrelated to these changes and already documented in the project’s FFI notes.

--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -23,6 +23,7 @@ endf_parser = "0.2.0"
 physics_types = { path = "../physics_types" }
 ffi_integration = { path = "../ffi_integration", default-features = false }
 itertools = "0.10"
+libm = "0.2"
 
 [features]
 default = ["gpu-acceleration", "bevy"]
