--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = { workspace = true, version = "0.32", features = ["serde"] }
+nalgebra = { workspace = true, features = ["serde"] }
 ndarray = { workspace = true }
-rand = { workspace = true, version = "0.8" }
+rand = { workspace = true }
 rand_chacha = { workspace = true }
 rand_distr = { workspace = true }
 serde = { workspace = true }
 serde_arrays = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-rayon = { workspace = true, version = "1.5" }
+rayon = { workspace = true }
 ordered-float = { workspace = true }
 approx = { workspace = true }
 bevy_ecs = { workspace = true, optional = true }
-once_cell = { workspace = true, version = "1.19" }
-log = { workspace = true, version = "0.4" }
+once_cell = { workspace = true }
+log = { workspace = true }
 endf_parser = "0.2.0"
 physics_types = { path = "../physics_types" }
 ffi_integration = { path = "../ffi_integration", default-features = false }
