--- a/config/default.toml
+++ b/config/default.toml
@@ -2,12 +2,12 @@
 # ========================================
 
 # Time simulation parameters
-tick_span_years = 1_000_000.0          # 1 million years per tick
+tick_span_years = 100_000.0          # 1 million years per tick
 target_ups = 1000.0                    # Updates per second target
 # max_ticks = 0                         # No limit (infinite simulation) - 0 means infinite
 
 # Initial conditions
-initial_particle_count = 1000          # Starting particles after Big Bang
+initial_particle_count = 10000          # Starting particles after Big Bang
 universe_radius_ly = 1000.0            # Initial universe radius (light-years)
 big_bang_temperature = 3000.0          # Initial temperature (K)
 
@@ -41,6 +41,6 @@ cluster_node_limit = 16                # Maximum cluster nodes
 enable_oracle_link = false           # Enable agent-operator communication
 
 # Validation and safety
-strict_physics_validation = true       # Enforce conservation laws strictly
+strict_physics_validation = false       # Enforce conservation laws strictly
 enable_safety_guards = true            # Enable resource protection
 # simulation_seed = 42                  # Random seed (commented out = random)
