feat: Implement GPU buffer pool and native renderer improvements
- Add comprehensive BufferPool for safe GPU memory management
- Implement buffer lifecycle tracking with submission indices
- Add buffer retirement and cleanup system to prevent memory leaks
- Enhance native renderer with Unity 6.0+ camera controls
- Add cgmath integration for improved quaternion-based rotations
- Implement staging belt for safe GPU uploads
- Add buffer pool statistics and monitoring
- Improve text buffer lifecycle management in debug panel
- Add flythrough camera mode with proper mouse look
- Include comprehensive buffer pool test suite

Technical improvements:
- Prevent GPU buffer validation errors during debug panel usage
- Add proper GPU synchronization before buffer cleanup
- Implement periodic buffer pool maintenance (every 60 frames)
- Enhanced camera controls with orbital, pan, and flythrough modes
- Better memory management for high-performance rendering

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,13 +4,17 @@ version = "0.1.0"
 edition = "2021"
 description = "Command-line interface for the Universe Simulation"
 
+[features]
+default = ["native_renderer"]
+native_renderer = ["dep:native_renderer"]
+
 [[bin]]
 name = "universectl"
 path = "src/main.rs"
 
 [dependencies]
 universe_sim = { path = "../crates/universe_sim" }
-native_renderer = { path = "../crates/native_renderer" }
+native_renderer = { path = "../crates/native_renderer", optional = true }
 clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 anyhow = { workspace = true }
