--- a/crates/universe_sim/Cargo.toml
+++ b/crates/universe_sim/Cargo.toml
@@ -30,6 +30,7 @@ config = { workspace = true }
 toml = { workspace = true }
 bincode = { workspace = true }
 md5 = "0.7.0"
+miniz_oxide = "0.8"
 
 [dev-dependencies]
 approx = "0.5"
