feat: Complete FFI integration removal and Node.js cleanup
This commit completes the three-phase FFI removal process:

PHASE 3 - Complete FFI Integration Removal:
- Remove entire crates/ffi_integration/ directory and all FFI code
- Delete FFI-related build scripts, wrappers, and bindings
- Remove Geant4, LAMMPS, GADGET, and ENDF FFI interfaces
- Clean up workspace dependencies and build configurations

Node.js Dashboard Removal:
- Remove package.json and package-lock.json (web dashboard removed)
- Delete scripts/setup_ffi_libraries.sh (no longer needed)
- Clean up FFI documentation and integration plans

Documentation Updates:
- Add SYSTEM_PROMPT_FOR_AGENTS.md with comprehensive project guidelines
- Create docs/ffi_removal.md documenting the removal process
- Archive old instructions and progress files
- Update physics engine to remove FFI dependencies

Benefits of FFI Removal:
- 100% native Rust implementation for all physics calculations
- Simplified build process with no external C/C++ dependencies
- Improved portability across platforms
- Enhanced maintainability and debugging capabilities
- Better performance without FFI overhead
- Increased memory safety and reduced complexity

The simulation now uses pure Rust implementations for:
- Particle interactions (octree-based spatial partitioning)
- Molecular dynamics and N-body gravity calculations
- Nuclear physics and quantum mechanics
- All physics engines and mathematical operations

This completes the transition to a fully native Rust universe simulation.

--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -19,9 +19,9 @@ approx = { workspace = true }
 bevy_ecs = { workspace = true, optional = true }
 once_cell = { workspace = true }
 log = { workspace = true }
+tracing = { workspace = true }
 endf_parser = "0.2.0"
 physics_types = { path = "../physics_types" }
-ffi_integration = { path = "../ffi_integration", default-features = false }
 itertools = "0.10"
 libm = "0.2"
 
@@ -43,3 +43,6 @@ lammps = []
 FALSE = []
 
 [build-dependencies]
+
+[dev-dependencies]
+tempfile.workspace = true
