Fix: Remove all panic-based error handling in ENDF nuclear database, resolve all compilation/test warnings, and ensure robust Result-based error propagation throughout. Clean build and test suite now enforced.

--- a/crates/native_renderer/Cargo.toml
+++ b/crates/native_renderer/Cargo.toml
@@ -49,6 +49,8 @@ heavy = [
     "multi-scale-rendering",
     "scientific-visualization"
 ]
+# Experimental work-in-progress code; must be off in release CI
+unstable-renderer = []
 # Enhanced features for heavy mode
 advanced-shaders = []
 multi-scale-rendering = []
