--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ description = "Command-line interface for the Universe Simulation"
 [features]
 default = ["native_renderer"]
 native_renderer = ["dep:native_renderer"]
+unstable-cli = []
 
 [[bin]]
 name = "universectl"
