--- a/crates/agent_evolution/Cargo.toml
+++ b/crates/agent_evolution/Cargo.toml
@@ -14,3 +14,6 @@ serde_json = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
 physics_engine = { path = "../physics_engine" }
+
+[features]
+unstable-agent = []
