set up new 'mutex' based system for agents to work at the same time in cursor

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ endf-b-viii.0/**
 endf-b-viii.0/*
 endf-b-viii.0-full.zip
 endfb-viii.0-neutrons.zip
-.cursor/rules/*
+.cursor/
 **/build/*
 agent_refactor_monitor.log
 sim_output.log
