feat(quantum): enhance quantum.rs with comprehensive Quantum Monte Carlo methods
- Add Variational Monte Carlo (VMC) implementation
- Add Diffusion Monte Carlo (DMC) implementation
- Add Path Integral Monte Carlo (PIMC) implementation
- Implement quantum force calculations and local energy evaluation
- Add comprehensive test suite for all QMC methods
- Fix variational Monte Carlo energy calculation for proper weighted averaging
- Ensure all quantum physics tests pass with numerical tolerance

This provides the foundation for quantum-accurate molecular dynamics
simulations and chemical reaction modeling in the EVOLUTION project.

--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -9,6 +9,7 @@ ndarray = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
 rand_distr = { workspace = true }
+fastrand = "1.9"
 serde = { workspace = true }
 serde_arrays = { workspace = true }
 anyhow = { workspace = true }
