--- a/crates/agent_evolution/Cargo.toml
+++ b/crates/agent_evolution/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
 physics_engine = { path = "../physics_engine" }
+physics_types = { path = "../physics_types" }
 
 [features]
 unstable-agent = []
