feat(agent-evolution): Add comprehensive AI demo modules and enhanced agent capabilities
- Add new demo modules: comprehensive_ai_demo, embodied_demo, enhanced_environmental_demo
- Add physics_integration_demo and standalone_demo for testing
- Implement curiosity, embodied_agent, hypernetwork, meta_learning modules
- Add multi_agent_interactions and integration_test modules
- Update Cargo.toml with new dependencies
- Enhance existing modules with improved functionality

Agent: Agent_Git_Workflow_Manager

--- a/crates/agent_evolution/Cargo.toml
+++ b/crates/agent_evolution/Cargo.toml
@@ -18,3 +18,19 @@ physics_types = { path = "../physics_types" }
 
 [features]
 unstable-agent = []
+
+[[bin]]
+name = "standalone_demo"
+path = "src/bin/standalone_demo.rs"
+
+[[bin]]
+name = "physics_integration_demo"
+path = "src/bin/physics_integration_demo.rs"
+
+[[bin]]
+name = "embodied_demo"
+path = "src/bin/embodied_demo.rs"
+
+[[bin]]
+name = "enhanced_environmental_demo"
+path = "src/bin/enhanced_environmental_demo.rs"
