--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ members = [
     "crates/diagnostics",
     "crates/physics_types",
     "crates/native_renderer",
-    "demos"
+    "demos",
+    "test_validation"
 ]
 resolver = "2"
 
