--- a/crates/native_renderer/Cargo.toml
+++ b/crates/native_renderer/Cargo.toml
@@ -26,6 +26,10 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 env_logger = { workspace = true }
 
+# Serialization
+serde = { workspace = true }
+serde_json = "1.0"
+
 # Additional heavy mode dependencies for advanced rendering
 instant = "0.1"
 pollster = "0.3"
