chore(build): update build system, configs, and molecular dynamics integration
- Update .gitignore and Cargo.lock for new modules and dependencies
- Update Cargo.toml for physics engine and molecular dynamics
- Refactor lib.rs and atomic_molecular_bridge.rs for integration
- Improve modularity and compatibility with new quantum features

This ensures the build system and configs are up to date with recent
physics and simulation enhancements.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ docs/research_proposals/2025-01-27_Agent_QMC_Optimizer_NovelQMCOptimizations.md
 docs/research_proposals/2025-01-27_Agent_Quantum_Physics_QuantumMonteCarloMolecularDynamics.md
 crates/agent_evolution/interaction_data.json
 crates/agent_evolution/trajectory_data.json
+docs/research_proposals/*
