--- a/crates/physics_engine/Cargo.toml
+++ b/crates/physics_engine/Cargo.toml
@@ -24,6 +24,8 @@ endf_parser = "0.2.0"
 physics_types = { path = "../physics_types" }
 itertools = "0.10"
 libm = "0.2"
+bincode = "1.3"
+parking_lot = "0.12"
 
 [features]
 default = ["gpu-acceleration"]
